# PubMate

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: appcast.xml  macos-distribution.md
macos/: PMID2EndNote.command  build_distribution.sh  make_icon.py  notarize_distribution.sh  prepare_sparkle_appcast.sh  pubmate_launcher_entry.py
macos/SparkleSupport/: Package.swift
macos/SparkleSupport/Sources/PubMateSparkleSupport/: main.swift
src/pmid2endnote/: __init__.py  __main__.py  app.py  cli.py  endnote.py  enw.py  errors.py  gui.py  macos_launcher.py  models.py  nbib.py  pubmed.py  references.py  report.py  scanner.py  settings.py  sparkle.py  word.py
tests/: test_app.py  test_cli_macos.py  test_endnote.py  test_enw.py  test_macos_distribution.py  test_nbib.py  test_pubmed_parse.py  test_report.py  test_scanner.py  test_settings.py  test_word_replace.py
