[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmid2endnote"
version = "0.1.0"
description = "Convert labeled PubMed PMID mentions in Word documents into EndNote temporary citations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PMID2EndNote contributors" }
]
dependencies = [
  "python-docx>=1.2.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]
macos = [
  "pyinstaller>=6.0",
  "pyobjc-framework-Cocoa>=11.0"
]

[project.scripts]
pmid2endnote = "pmid2endnote.cli:main"
pmid2endnote-gui = "pmid2endnote.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
